# aiogram-bot-structure

./: .dockerignore  README.md  docker-compose.production.yml  pyproject.toml
app/: main.py
app/bot/: create_bot.py  filters.py  init_bot.py  routers.py
app/bot/handlers/callbacks/: menucallback.py
app/bot/keyboards/: registration_kb.py
app/core/: config.py  constants.py
app/dao/: base.py
app/users/: dao.py  models.py
