[project]
name = "aiogram-bot-structure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.15.2",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
